k8s/infrastructure/rook/config/ceph-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - ceph.apps.int.scarey.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
